--- a/낚시 포인트/index/index.html
+++ b/낚시 포인트/index/index.html
@@ -6,7 +6,7 @@
     <title>낚시 포인트</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=uwxtjgtjb8"></script>
-    <script type="text/javascript" src="../data/accidentdeath.js"></script>
+    <script type="text/javascript" src="../data/FP.js"></script>
     <script type="text/javascript" src="../src/MarkerClustering.js"></script>
 
     <link rel = "stylesheet" href="style.css">
