--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>낚시 포인트</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=uwxtjgtjb8"></script>
-    <script type="text/javascript" src="../data/FP.js"></script>
-    <script type="text/javascript" src="../src/MarkerClustering.js"></script>
+    <script type="text/javascript" src=".data/FP.js"></script>
+    <script type="text/javascript" src="./src/MarkerClustering.js"></script>
 
     <link rel = "stylesheet" href="style.css">
     <link rel = "javascript" href="index.js">
@@ -20,7 +20,7 @@
     <header class = "header">
         <div class = "header_logo">
             <a href = "#">
-                <div style="margin-top:0;vertical-align:bottom;text-align: center;display: inline-block;margin:0;cursor:pointer;width:100px;height:100px;font-size:25px;color:white;text-align:center;background:url(../images/fishing-point.png);background-size:contain;"></div>',
+                <div style="margin-top:0;vertical-align:bottom;text-align: center;display: inline-block;margin:0;cursor:pointer;width:100px;height:100px;font-size:25px;color:white;text-align:center;background:url(./images/fishing-point.png);background-size:contain;"></div>',
             </a>
         </div>
         <dev class="header_gnb">
