--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
     }
   
     var htmlMarker1 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(../images/cluster-marker-1.png);background-size:contain;"></div>',
+            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(./images/cluster-marker-1.png);background-size:contain;"></div>',
             size: N.Size(40, 40),
             anchor: N.Point(20, 20)
         },
         htmlMarker2 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(../images/cluster-marker-2.png);background-size:contain;"></div>',
+            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(./images/cluster-marker-2.png);background-size:contain;"></div>',
             size: N.Size(40, 40),
             anchor: N.Point(20, 20)
         },
         htmlMarker3 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(../images/cluster-marker-3.png);background-size:contain;"></div>',
+            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(./images/cluster-marker-3.png);background-size:contain;"></div>',
             size: N.Size(40, 40),
             anchor: N.Point(20, 20)
         },
         htmlMarker4 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(../images/cluster-marker-4.png);background-size:contain;"></div>',
+            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(./images/cluster-marker-4.png);background-size:contain;"></div>',
             size: N.Size(40, 40),
             anchor: N.Point(20, 20)
         },
         htmlMarker5 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(../images/cluster-marker-5.png);background-size:contain;"></div>',
+            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(./images/cluster-marker-5.png);background-size:contain;"></div>',
             size: N.Size(40, 40),
             anchor: N.Point(20, 20)
         };
